# gtfs-rust-wasm

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  package-lock.json  package.json
docker/: nginx.conf
js/: index.js
src/: lib.rs
static/: index.html
